--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,7 @@
   "singleQuote": false,
   "trailingComma": "es5",
   "arrowParens": "always",
-  "endOfLine": "auto"
+  "endOfLine": "lf",
+  "proseWrap": "never"
+
 }
