--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "camelcase-keys": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "recoil": "^0.7.5",
+    "react-use": "^17.4.0",
+    "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
+    "victory": "^36.6.0",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
